; ModuleID = '/home/carl/AnghaBench/mongoose/examples/PIC32/mqtt_client/firmware/src/system_config/mx795_CC3100_e16/framework/driver/spi/static/src/extr_drv_spi_mapping.c_DRV_SPI_BufferAddWrite.c'
source_filename = "/home/carl/AnghaBench/mongoose/examples/PIC32/mqtt_client/firmware/src/system_config/mx795_CC3100_e16/framework/driver/spi/static/src/extr_drv_spi_mapping.c_DRV_SPI_BufferAddWrite.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DRV_SPI_BUFFER_HANDLE_INVALID = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @DRV_SPI_BufferAddWrite(i32 %0, i8* %1, i64 %2, i32 %3, i8* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  %11 = alloca i64, align 8
  %12 = alloca i32, align 4
  store i32 %0, i32* %6, align 4
  store i8* %1, i8** %7, align 8
  store i64 %2, i64* %8, align 8
  store i32 %3, i32* %9, align 4
  store i8* %4, i8** %10, align 8
  %13 = load i32, i32* %6, align 4
  %14 = and i32 %13, 255
  %15 = sext i32 %14 to i64
  store i64 %15, i64* %11, align 8
  %16 = load i64, i64* %11, align 8
  switch i64 %16, label %23 [
    i64 128, label %17
  ]

17:                                               ; preds = %5
  %18 = load i8*, i8** %7, align 8
  %19 = load i64, i64* %8, align 8
  %20 = load i32, i32* %9, align 4
  %21 = load i8*, i8** %10, align 8
  %22 = call i32 @DRV_SPI0_BufferAddWrite(i8* %18, i64 %19, i32 %20, i8* %21)
  store i32 %22, i32* %12, align 4
  br label %25

23:                                               ; preds = %5
  %24 = load i32, i32* @DRV_SPI_BUFFER_HANDLE_INVALID, align 4
  store i32 %24, i32* %12, align 4
  br label %25

25:                                               ; preds = %23, %17
  %26 = load i32, i32* %12, align 4
  ret i32 %26
}

declare dso_local i32 @DRV_SPI0_BufferAddWrite(i8*, i64, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
